--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        applicationId "com.example.timerpausecalisthenics"
+        applicationId "com.paccoTimer"
         minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
